--- a/src/components/ReelSlideshow.astro
+++ b/src/components/ReelSlideshow.astro
@@ -11,7 +11,9 @@ const { data: reel } = await loadQuery({
 
 const reelModalTriggerId = 'reel-slideshow'
 
-const thumbUrls = reel.placeholderStills.map((still) => still.asset.url)
+const thumbUrls = reel.placeholderStills.map(
+  (still) => still.asset.url + '?w=256'
+)
 
 const getAverageRGBColor = async (imgUrl) => {
   // return as string `r, g, b` so alpha can easily be added
@@ -51,7 +53,7 @@ const backdropAlpha = 0.75
       {
         reel.placeholderStills.map((still) => (
           <img
-            src={still.asset.url}
+            src={still.asset.url + '?w=1796'}
             alt=""
             class="slide"
             width="1796"
