--- a/src/layout/Layout.astro
+++ b/src/layout/Layout.astro
@@ -24,6 +24,11 @@ const htmlString = `<style>:root {
     <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 
+    <link rel="preconnect" href="//cdn.sanity.io" />
+    <link rel="dns-prefetch" href="//cdn.sanity.io" />
+    <link rel="preconnect" href="//player.vimeo.com" />
+    <link rel="dns-prefetch" href="//player.vimeo.com" />
+
     <script>
       document.documentElement.className =
         document.documentElement.className.replace(/\bno-js\b/g, '') + ' js '
