--- a/src/components/ReelSlideshow.astro
+++ b/src/components/ReelSlideshow.astro
@@ -91,6 +91,8 @@ const backdropAlpha = 0.75
     <div class="play-button">
       <img
         src="/img/play.svg"
+        width="20"
+        height="20"
         alt="Play Andrew Aiello's reel"
         class="play-button-icon"
       />
