addendum: add `height: auto` for featured stills & About portrait
Otherwise height remains constant as width changes, yielding distorted images.

--- a/src/components/AboutSection.astro
+++ b/src/components/AboutSection.astro
@@ -63,7 +63,7 @@ const IMG_MAX_WIDTH = 572 // ~36rem max-width from CSS
   }
 
   img.portrait {
-    height: 100%;
+    height: auto;
   }
 
   @media (min-width: 36rem) {
