fix(ReelSlideshow): change ' to ` to make template literal work

--- a/src/components/ReelSlideshow.astro
+++ b/src/components/ReelSlideshow.astro
@@ -60,7 +60,7 @@ const backdropAlpha = 0.75
       {
         reel.placeholderStills.map((still) => (
           <img
-            src={still.url + '?w=1796${IMG_GLOBAL_URL_PARAMS}'}
+            src={still.url + `?w=1796${IMG_GLOBAL_URL_PARAMS}`}
             srcset=`
               ${still.url}?w=400${IMG_GLOBAL_URL_PARAMS} 400w,
               ${still.url}?w=600${IMG_GLOBAL_URL_PARAMS} 600w,
