perf: add `srcset` and `sizes` to all images
- Includes util function for generating srcset widths
- Adds MAX_DPR (maximum device pixel ratio) constant to config

TO DO: Consider increasing step from 200(px) to something larger for fewer possible image dims to reduce number of unique image sizes Sanity CDN has to generate and to reduce markup sent to browser.

Closes #19

--- a/src/components/AboutSection.astro
+++ b/src/components/AboutSection.astro
@@ -2,7 +2,8 @@
 import { loadQuery } from '../sanity/lib/loadQuery'
 import { renderPortableText } from '../sanity/lib/renderPortableText.js'
 import Button from './Button.astro'
-import { IMG_GLOBAL_URL_PARAMS } from '../config'
+import { getSrcset } from '../scripts/utils/getSrcset'
+import { IMG_GLOBAL_URL_PARAMS, MAX_DPR } from '../config'
 
 const { data } = await loadQuery({
   query: `
@@ -35,7 +36,15 @@ const IMG_MAX_WIDTH = 572 // ~36rem max-width from CSS
 
   <div class="bleed-r">
     <img
-      src={image.url + `?w=${IMG_MAX_WIDTH * 2}${IMG_GLOBAL_URL_PARAMS}`}
+      src={image.url + `?w=${IMG_MAX_WIDTH * MAX_DPR}${IMG_GLOBAL_URL_PARAMS}`}
+      srcset={getSrcset({
+        url: image.url,
+        min: 300,
+        max: IMG_MAX_WIDTH * MAX_DPR,
+        step: 200,
+        additionalParams: IMG_GLOBAL_URL_PARAMS,
+      })}
+      sizes=`(max-width: 48rem) 90vw, ${IMG_MAX_WIDTH}px`
       width={IMG_MAX_WIDTH}
       height={Math.round(IMG_MAX_WIDTH / image.aspect)}
       class="portrait"
