--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -184,7 +184,7 @@ h3 {
 
 .still {
   display: block;
-  margin-bottom: 0.5em;
+  margin-bottom: 1em;
   width: 100%;
   height: auto;
 }
@@ -266,7 +266,7 @@ body.home {
     top: 4.95em;
     left: 2px;
     width: 0.5px;
-    height: 100%;
+    height: calc(100% + 4em);
     background-color: var(--color-vertical-rule);
     mix-blend-mode: screen;
   }
