chore: rename scripts in src/scripts
Make naming more logical.

--- a/src/components/AboutSection.astro
+++ b/src/components/AboutSection.astro
@@ -2,7 +2,7 @@
 import { loadQuery } from '../sanity/lib/loadQuery'
 import { renderPortableText } from '../sanity/lib/renderPortableText.js'
 import Button from './Button.astro'
-import { getSrcset } from '../scripts/utils/getSrcset'
+import { getSrcset } from '../scripts/getSrcset'
 import { IMG_GLOBAL_URL_PARAMS, MAX_DPR } from '../config'
 
 const { data } = await loadQuery({
