--- a/src/layout/Layout.astro
+++ b/src/layout/Layout.astro
@@ -1,7 +1,7 @@
 ---
 import Monogram from '../components/Monogram.astro'
 import '../styles/global.scss'
-import { getOgImageUrl } from '../scripts/utils/getImageUrl'
+import { getOgImageUrl } from '../scripts/getOgImageUrl'
 
 const { name, title, description, ogImage, colorVerticalRule } = Astro.props
 const htmlString = `<style>:root {
